fixed the spacing issue with the iMAC on the acumen page

--- a/css/custom.css
+++ b/css/custom.css
@@ -341,7 +341,7 @@ a, a:hover, a:active{
 }
 
 .project_challenges {
-  padding-top: 40px;
+  /*padding-top: 40px;*/
   padding-bottom: 40px;
 }
 
